--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,9 +3,10 @@ name = "slice_ops"
 version = "0.1.12"
 edition = "2021"
 license = "MIT"
-description = "A selection of useful slice operations that run at compile-time"
+keywords = ["slice", "util", "ops"]
+categories = ["rust-patterns", "no-std::no-alloc"]
+description = "A selection of useful slice operations."
 repository = "https://github.com/sigurd4/slice_ops"
-keywords = ["slice", "const", "util", "ops"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
