--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -31,7 +31,7 @@ jobs:
       with:
         token: ${{secrets.CODECOV_TOKEN}} # not required for public repos
         fail_ci_if_error: true
-        slug: $GITHUB_REPOSITORY
+        slug: ${{github.repository}}
     - name: "Archive code coverage results"
       uses: "actions/upload-artifact@v4"
       with:
