Add more keywords

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "slice_ops"
 version = "1.0.5"
 edition = "2021"
 license = "MIT"
-keywords = ["slice", "util", "ops"]
+keywords = ["slice", "utility", "ops", "async", "operations"]
 categories = ["rust-patterns", "algorithms", "asyncronous", "concurrency", "no-std::no-alloc", "rust-patterns"]
 description = "A selection of useful slice operations."
 repository = "https://github.com/sigurd4/slice_ops"
